# spritz

./: .gitignore  .travis.yml  Crypto-Cipher-Spritz.html  README.md  doc-index.html  index-frames.html  index.html  mini_Crypto-Cipher-Spritz.html  spritz.cabal  spritz.haddock
scripts/: deploy-haddock-manually.sh
src/Crypto/Cipher/: Spritz.hs
